test/test_suite/errors/optional_discard_in_cond.c3
module main;

fn int? may_fault() => 2;

fn void main()
{
    if (may_fault(), true); // #error: You can either assign it to a variable
}
